# fp-tic-tac-toe-server

./: .gitignore  README.md  stack.yaml
tictactoe-client/: tictactoe-client.cabal
tictactoe-client/src/: Lib.hs
tictactoe-server/: README.md  tictactoe-server.cabal
tictactoe-server/app/: App.hs  Routes.hs
tictactoe-server/src/: Game.hs  Models.hs  Routes.hs
tictactoe-server/test/: GameSpec.hs
