name:                tictactoe-server
version:             0.1.0.0
synopsis:            Synopsis for task 0
description:         Task 0 for FP ITMO course

homepage:            https://github.com/fp-homework/tree/master/hw0#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Models
                     , Game
                     , Routes
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , mtl
                     , transformers
                     , split
                     , random
                     , aeson
                     , servant
                     , servant-server
                     , stm-containers
                     , http-api-data
                     , bytestring
                     , text
                     , uuid
                     , containers
                     , microlens
                     , microlens-th
  default-language:    Haskell2010

executable tictactoe-server
  hs-source-dirs:      app
  main-is:             App.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tictactoe-server
                     , mtl
                     , transformers
                     , servant
                     , servant-server
                     , stm-containers
                     , aeson
                     , bytestring
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       GameSpec
  build-depends:       base
                     , tictactoe-server
                     , hspec
                     , containers
                     , mtl
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010